tests/snapshots/parser_tests__err_complex_expressions.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:4:13

     4 │
       │ let x = .name
       │         ^^^
       │

  ⓘ Expected expression
────────────────────────────────────────────────────────────
